fix(1899): align chat history title and download button

--- a/common-components/ui-components/Button/Button.scss
+++ b/common-components/ui-components/Button/Button.scss
@@ -50,15 +50,17 @@
 
   &--secondary {
     background-color: get-color(white);
-    box-shadow: inset 0 0 0 2px get-color(black-coral-10);
-    color: get-color(black-coral-15);
+    box-shadow: inset 0 0 0 2px get-color(sapphire-blue-10);
+    color: get-color(sapphire-blue-10);
 
     &:hover,
     &:active {
-      box-shadow: inset 0 0 0 2px get-color(black-coral-2);
+      background-color: get-color(sapphire-blue-0);
+      box-shadow: inset 0 0 0 2px get-color(sapphire-blue-10);
     }
 
     &:focus {
+      background-color: get-color(sapphire-blue-0);
       box-shadow: inset 0 0 0 2px get-color(sapphire-blue-10);
     }
 
@@ -145,6 +147,8 @@
   }
 
   &--s {
-    padding: 4.5px 24px;
+    font-size: $veera-font-size-80;
+    padding: 4px 14px;
+    font-weight: 700;
   }
 }
